fixed delete dialog styling for uniform alignment

--- a/src/app/share-dialog/share-dialog.component.scss
+++ b/src/app/share-dialog/share-dialog.component.scss
@@ -16,7 +16,7 @@
     display: flex;
     align-items: center;
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 2vh;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
